--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
         <h2 class="hidden">Skills and Stacks</h2>
         <div class="title_wrap">
           <p class="subtitle" id="skill">Skills & Stacks</p>
-          <svg xmlns="http://www.w3.org/2000/svg" width="433" height="20" viewBox="0 0 433 20" fill="none">
+          <svg class="ss_title_svg" xmlns="http://www.w3.org/2000/svg" width="433" height="20" viewBox="0 0 433 20" fill="none">
             <path d="M10 20C4.47714 20 4.82823e-07 15.5229 0 10C-4.82823e-07 4.47719 4.47714 3.74627e-05 10 3.69798e-05L10 20ZM433 20L10 20L10 3.69798e-05L433 0L433 20Z" fill="url(#paint0_linear_59_432)"/>
             <defs>
-              <linearGradient id="paint0_linear_59_432" x1="10" y1="59.9975" x2="433" y2="59.9975" gradientUnits="userSpaceOnUse">
+              <linearGradient id="paint0_linear_59_432" x1="10" y1="60" x2="433" y2="60" gradientUnits="userSpaceOnUse">
                 <stop stop-color="#003CFF"/>
                 <stop offset="1" stop-color="#003CFF" stop-opacity="0"/>
               </linearGradient>
@@ -331,7 +331,7 @@
                 <li><p><span>2022</span>전국교대 육상경기 100m·400계주 신기록</p></li>
                 <li><p><span>2021</span>교육정보화 연구 대회 대상</p></li>
                 <li><p><span>2021</span>SW·AI 에듀톤 한국과학창의재단 이사장상</p></li>
-                <li><p><span>2020</span>Microsoft Teams 활용 공모전 대상</p></li>
+                <li><p><span>2020</span>Microsoft Teams 공모전 대상</p></li>
               </ul>
             </div>
             <div class="am_category" id="certificates">
