--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="title_wrap">
           <p class="subtitle" id="skill">Skills & Stacks</p>
           <svg class="ss_title_svg" xmlns="http://www.w3.org/2000/svg" width="433" height="20" viewBox="0 0 433 20" fill="none">
-            <path d="M10 20C4.47714 20 4.82823e-07 15.5229 0 10C-4.82823e-07 4.47719 4.47714 3.74627e-05 10 3.69798e-05L10 20ZM433 20L10 20L10 3.69798e-05L433 0L433 20Z" fill="url(#paint0_linear_59_432)"/>
+            <path class="dashable-path" d="M10 20C4.47714 20 4.82823e-07 15.5229 0 10C-4.82823e-07 4.47719 4.47714 3.74627e-05 10 3.69798e-05L10 20ZM433 20L10 20L10 3.69798e-05L433 0L433 20Z" fill="url(#paint0_linear_59_432)"/>
             <defs>
               <linearGradient id="paint0_linear_59_432" x1="10" y1="60" x2="433" y2="60" gradientUnits="userSpaceOnUse">
                 <stop stop-color="#003CFF"/>
@@ -233,9 +233,9 @@
             </li>
           </ul>
         </div>
-        <div class="ss_bg">
+        <!-- <div class="ss_bg">
           <img src="/images/bg_circle_circle.png" />
-        </div>
+        </div> -->
       </div>
     </section>
   
