design fix(ss_bg_circle)

--- a/index.html
+++ b/index.html
@@ -233,9 +233,10 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="ss_bg">
-          <img src="/images/bg_circle_circle.png" />
-        </div> -->
+        <div class="ss_bg">
+          <img class="ss_bg_circle" src="/images/bg_skills_stacks_circle.png" alt="배경"/>
+          <img class="ss_bg_text" src="/images/bg_skills_stacks_text.png" alt="배경"/>
+        </div>
       </div>
     </section>
   
