add image and fix

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h2 class="hidden">Motto</h2>
         <div class="motto_text">
           <p class="mt_title">GO GETTER</p>
-          <p class="mt_text">Go-Getter란 망설임 없이 무엇인가 도전을 하고, 성공을 위한 투지를 가지고, 야심을 가지는 열정적인 사람을 뜻합니다. 저는 다양한 분야에 끊임없이 도전하고 앞으로 헤엄치는 Go-Getter로 살아가기 위해 최선을 다하고 있습니다.</p>
+          <p class="mt_text">안녕하세요. "Go-Getter 최지현"입니다. Go-Getter 란 망설임 없이 무엇인가 도전을 하고, 성공을 위한 투지를 가지고, 야심을 가지는 열정적인 사람을 뜻합니다. 저는 다양한 분야에 끊임없이 도전하고 앞으로 헤엄치는 Go-Getter로 살아가기 위해 최선을 다하고 있습니다.</p>
         </div>
         <div class="mt_bg_text">
           <p>GO GETTER</p>
@@ -156,6 +156,10 @@
                   </span>
                 </p>
                 <p id="alertCopy"></p>
+              </li>
+              <li>
+                <p class="title">Running Records</p>
+                <p class="text">1600m, 5m 07s (2015)<br/>100m, 11.19s (2022)</p>
               </li>
             </ul>
           </div>
@@ -276,8 +280,8 @@
               <li></li>
               <li></li>
               <li></li>
-              <li>운틴 제작 중</li>
-              <li>포트폴리오 제작 중</li>
+              <li></li>
+              <li></li>
             </ul>
           </div>
         </div>
