--- a/project_content/project_details/project_detail02.html
+++ b/project_content/project_details/project_detail02.html
@@ -1,4 +1,4 @@
-<a href="#" class="detail-slider__button">웹 사이트 바로가기</a>
+<a href="https://marineserre.netlify.app/" class="detail-slider__button">웹 사이트 바로가기</a>
 <div class="detail-slider__wrp swiper-wrapper">
 
   <div class="detail-slider__item swiper-slide">
