--- a/project_content/project_overview05.html
+++ b/project_content/project_overview05.html
@@ -1,5 +1,6 @@
 <div>
   <div class="project_main_pic">
+    <img src="/images/project-05-main.png" alt="운동 루틴 메인 사진" />
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
@@ -17,8 +18,8 @@
     </div>
     <div class="project_links">
       <ul>
-        <a><li><i class="fa-solid fa-globe"></i> 데모 웹사이트</li></a>
-        <a><li><i class="fa-brands fa-github"></i> GitHub</li></a>
+        <a href="https://woontin.netlify.app/" target="_blank"><li><i class="fa-solid fa-globe"></i> 데모 웹사이트</li></a>
+        <a href="https://github.com/Choi-Jihyun/woontin-ReactProject02" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
       </ul>
     </div>
   </div>
