--- a/project_content/project_overview06.html
+++ b/project_content/project_overview06.html
@@ -1,5 +1,6 @@
 <div>
   <div class="project_main_pic">
+    <img src="/images/project-06-main.png" alt="포트폴리오 메인 사진" />
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
@@ -17,7 +18,7 @@
     </div>
     <div class="project_links">
       <ul>
-        <a href="" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
+        <a href="https://github.com/Choi-Jihyun/portfolio-osung" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
       </ul>
     </div>
   </div>
