--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
         </a>
         <div class="menu">
           <ul class="menu_list">
-            <li data-target="skills_and_stacks">Skills & Stacks<div class="svg_line"></div></li>
-            <li data-target="projects">Projects</li>
-            <li data-target="about_me">About Me</li>
+            <!-- <li data-target="skills_and_stacks">Skills & Stacks<div class="svg_line"></div></li> -->
+            <li data-target="skills_and_stacks">Skills & Stacks<img src="/images/header_svg-01.png"/></li>
+            <li data-target="projects">Projects<img src="/images/header_svg-02.png"/></li>
+            <li data-target="about_me">About Me<img src="/images/header_svg-03.png"/></li>
           </ul>
           <!-- svg 자리 -->
         </div>
@@ -307,9 +308,9 @@
           </div>
         </div>
 
-          <!-- <div class="pj_bg_text">
-            <span id="pbt_1">UN</span><span id="pbt_2">STOPP</span><span id="pbt_3">ABLE</span>
-          </div> -->
+        <div class="pj_bg_text">
+          <span id="pbt_1">UN</span><span id="pbt_2">STOPP</span><span id="pbt_3">ABLE</span>
+        </div>
       </div>
     </section>
   
