--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <div id="wrapper">
     <header>
-      <h1 class="hidden">OSUNG portfolio</h1>
+      <h1 class="hidden">오성지현 portfolio</h1>
       <div id="header_inner">
         <a>
           <div id="logo">
