--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
   <meta property="og:site_name" content="오성 포트폴리오" />
-  <meta property="og:description" content="지현이가 만든 포트폴리오를 보고 칭찬해주세요." />
+  <meta property="og:description" content="오성지현 포트폴리오를 보고 칭찬해주세요." />
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
