--- a/project_content/project_overview06.html
+++ b/project_content/project_overview06.html
@@ -14,6 +14,7 @@
         <li>Web</li>
         <li>TypeScript</li>
         <li>Scss</li>
+        <li>SEO 최적화</li>
       </ul>
     </div>
     <div class="project_links">
