--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <ul class="info_list">
               <li>
                 <p class="title">Name</p>
-                <p class="text">최지현</p>
+                <p class="text">오성 최지현</p>
               </li>
               <li>
                 <p class="title">Birth</p>
