--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <section id="main">
       <div id="main_wrapper">
-        <h2 class="hidden">Main</h2>
+        <h2 class="hidden">오성 지현 Main</h2>
         <div class="running_osung_wrapper">
           <div class="me"></div>
         </div>
@@ -103,7 +103,7 @@
   
     <section id="motto">
       <div id="motto_wrapper">
-        <h2 class="hidden">Motto</h2>
+        <h2 class="hidden">최지현의 Motto</h2>
         <div class="motto_text">
           <p class="mt_title">GO GETTER</p>
           <p class="mt_text">안녕하세요. "Go-Getter 최지현"입니다. Go-Getter 란 망설임 없이 무엇인가 도전을 하고, 성공을 위한 투지를 가지고, 야심을 가지는 열정적인 사람을 뜻합니다. 저는 다양한 분야에 끊임없이 도전하고 앞으로 헤엄치는 Go-Getter로 살아가기 위해 최선을 다하고 있습니다.</p>
@@ -126,7 +126,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="1185" viewBox="0 0 1920 1185" fill="none">
           <path d="M1923.51 0.635293L-8.32139e-05 238L7.58626e-05 1028.5L1923.51 1184.64L1923.51 0.635293Z" fill="#003CFF"/>
         </svg>
-        <h2 class="hidden">Basic Information</h2>
+        <h2 class="hidden">오성지현 Basic Information</h2>
         <div class="infos_wrapper">
           <div class="info">
             <ul class="info_list">
@@ -187,7 +187,7 @@
   
     <section id="skills_and_stacks">
       <div id="skills_and_stacks_wrapper">
-        <h2 class="hidden">Skills and Stacks</h2>
+        <h2 class="hidden">오성 지현 Skills and Stacks</h2>
         <div class="title_wrap">
           <p class="subtitle" id="skill">Skills & Stacks</p>
           <svg class="ss_title_svg" xmlns="http://www.w3.org/2000/svg" width="433" height="20" viewBox="0 0 433 20" fill="none">
@@ -249,7 +249,7 @@
     
     <section id="projects">
       <div id="projects_wrapper">
-        <h2 class="hidden">My Projects</h2>
+        <h2 class="hidden">오성 지현의 Projects</h2>
         <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="739" viewBox="0 0 1920 739" fill="none">
           <path d="M0 0.5L1920 290V739H0V0.5Z" fill="#FF9900"/>
         </svg>
@@ -316,7 +316,7 @@
   
     <section id="about_me">
       <div id="about_me_wrapper">
-        <h2 class="hidden">About Me</h2>
+        <h2 class="hidden">최지현 어떤 사람일까?</h2>
         <div class="about_me_inner">
           <div class="title_wrap">
             <p class="subtitle" id="aboutme">About Me</p>
@@ -383,7 +383,7 @@
 
     <footer>
       <div id="footer_wrapper">
-        <h2 class="hidden">contact me</h2>
+        <h2 class="hidden">오성 지현에게 연락하기</h2>
         <div class="footer_inner">
           <p class="f_title">Contact</p>
           <ul class="sns_list">
