--- a/project_content/project_details/project_detail06.html
+++ b/project_content/project_details/project_detail06.html
@@ -8,10 +8,7 @@
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
       <div class="detail-slider__title">기획 의도</div>
-      <div class="detail-slider__text">모두 원장님께 은혜를 베풀기 위해 만들었습니다. 
-        그렇지만 선물이라고 대충 만드는 것이 아닌 정성을 다해 다양한 것들을 신경써서 제작하고자 하였습니다.
-        병원의 특성에 맞추어 사용자 경험에 많은 신경을 썼습니다. 
-        그래서 사용자들이 직관적으로 웹사이트를 사용할 수 있도록 제작</div>
+      <div class="detail-slider__text">제가 만든 웹 사이트들을 보여주기 위해 웹 사이트를 제작하였습니다.</div>
     </div>
   </div>
   
@@ -22,20 +19,18 @@
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
       <div class="detail-slider__title">반응형, 적응형</div>
-      <div class="detail-slider__text">반응형 하드코딩은 부트스트랩과 같은 반응형 라이브러리를 사용하지 않고 진행했습니다. 이는 더욱 특화된 반응형 웹사이트를 제작하기 위해서입니다. 
-        또한, 적응형 웹사이트를 구현한 경험이 어려웠지만, 사용자들의 다양한 기기와 화면 크기에 맞춰 최상의 경험을 제공하기 위해 적응형을 채택했습니다.</div>
+      <div class="detail-slider__text">반응형을 사용하여 데스크탑에서 모바일까지 쉽게 볼 수 있도록 제작하였습니다. </div>
     </div>
   </div>
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_03.png" alt="">
+      <img src="/images/projects/detail_06_03.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">시멘틱 마크업, 웹접근성</div>
-      <div class="detail-slider__text">시멘틱 마크업에도 많은 신경을 썼는데, 이는 코딩의 최적화와 웹사이트의 구조를 명확히 하기 위해서입니다. 
-        또한, 병원의 특성상 다양한 환자가 있습니다. 그 중에는 시각 장애인도 포함되는데 이러한 사람들도 웹 사이트를 편리하게 사용할 수 있을 수 있도록 웹 접근성에 신경썼습니다.</div>
+      <div class="detail-slider__title">SEO 최적화</div>
+      <div class="detail-slider__text">SEO 최적화를 위해 제가 만든 다른 웹사이트도 적용한 메타 태그 최적화뿐만 아니라 다양한 방법을 사용하여 SEO 최적화에 신경을 썼습니다. HTTPS를 사용하여 웹사이트를 안전하게 유지하여 보안 문제를 강화하였습니다. 또한, XML 사이트맵을 생성하고 Google Search Console에 제출하여 검색 엔진이 웹사이트의 페이지를 쉽게 색인화할 수 있도록 하였습니다.</div>
     </div>
   </div>
   
