--- a/project_content/project_overview06.html
+++ b/project_content/project_overview06.html
@@ -6,7 +6,7 @@
   <div class="project_infos">
     <p class="p_name">PORTFOLIO</p>
     <p class="p_bodytext">
-      지금 현재 보고 계시는 사이트를 제작하였습니다. <br/>
+      지금 현재 보고 계시는 사이트를 제작하였습니다. SEO 최적화가 되어 있는 사이트입니다. <br/>
     </p>
     <div class="projects_skill">
       <ul>
