--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
         <h2 class="hidden">최지현의 Motto</h2>
         <div class="motto_text">
           <p class="mt_title">GO GETTER</p>
-          <p class="mt_text">안녕하세요. "Go-Getter 최지현"입니다. Go-Getter 란 망설임 없이 무엇인가 도전을 하고, 성공을 위한 투지를 가지고, 야심을 가지는 열정적인 사람을 뜻합니다. 저는 다양한 분야에 끊임없이 도전하고 앞으로 헤엄치는 Go-Getter로 살아가기 위해 최선을 다하고 있습니다.</p>
+          <p class="mt_text">
+            안녕하세요. "Go-Getter 최지현"입니다. Go-Getter 란 망설임 없이 무엇인가 도전을 하고, 성공을 위한 투지를 가지고, 야심을 가지는 열정적인 사람을 뜻합니다. 
+            저는 다양한 분야에 끊임없이 도전하고 앞으로 달려나가는 Go-Getter로 살아가기 위해 최선을 다하고 있습니다. 한 예시로 육상 100m 아마추어 1등 기록을 가지고 있습니다.
+          </p>
         </div>
         <div class="mt_bg_text">
           <p>GO GETTER</p>
@@ -190,7 +193,7 @@
         <h2 class="hidden">오성 지현 Skills and Stacks</h2>
         <div class="title_wrap">
           <p class="subtitle" id="skill">Skills & Stacks</p>
-          <svg class="ss_title_svg" xmlns="http://www.w3.org/2000/svg" width="433" height="20" viewBox="0 0 433 20" fill="none">
+          <svg class="ss_title_svg " xmlns="http://www.w3.org/2000/svg" width="433" height="20" viewBox="0 0 433 20" fill="none">
             <path class="dashable-path" d="M10 20C4.47714 20 4.82823e-07 15.5229 0 10C-4.82823e-07 4.47719 4.47714 3.74627e-05 10 3.69798e-05L10 20ZM433 20L10 20L10 3.69798e-05L433 0L433 20Z" fill="url(#paint0_linear_59_432)"/>
             <defs>
               <linearGradient id="paint0_linear_59_432" x1="10" y1="60" x2="433" y2="60" gradientUnits="userSpaceOnUse">
