--- a/project_content/project_details/project_detail01.html
+++ b/project_content/project_details/project_detail01.html
@@ -7,11 +7,11 @@
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">기획 의도</div>
-      <div class="detail-slider__text">모두 원장님께 은혜를 베풀기 위해 만들었습니다. 
-        그렇지만 선물이라고 대충 만드는 것이 아닌 정성을 다해 다양한 것들을 신경써서 제작하고자 하였습니다.
-        병원의 특성에 맞추어 사용자 경험에 많은 신경을 썼습니다. 
-        그래서 사용자들이 직관적으로 웹사이트를 사용할 수 있도록 제작</div>
+      <div class="detail-slider__title">React</div>
+      <div class="detail-slider__text">
+        CSR와 SPA(Single Page Application)를 구현하였습니다. 서버 측에서 렌더링하는 대신 브라우저에서 렌더링하는 방식입니다. 필요한 데이터만 불러와 화면을 갱신하는 방식으로 작동합니다. 이를 위해 React Router를 사용하였습니다.
+        <br/>그 외에 다음과 같은 React의 훅들을 적용하였습니다.<br/> useState, useEffect, useRef, useParams, useContext, useNavigate, immer, Custom Hook 등.
+      </div>
     </div>
   </div>
   
@@ -21,9 +21,12 @@
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">반응형, 적응형</div>
-      <div class="detail-slider__text">반응형 하드코딩은 부트스트랩과 같은 반응형 라이브러리를 사용하지 않고 진행했습니다. 이는 더욱 특화된 반응형 웹사이트를 제작하기 위해서입니다. 
-        또한, 적응형 웹사이트를 구현한 경험이 어려웠지만, 사용자들의 다양한 기기와 화면 크기에 맞춰 최상의 경험을 제공하기 위해 적응형을 채택했습니다.</div>
+      <div class="detail-slider__title">Firebase Authentification</div>
+      <div class="detail-slider__text">
+        useAuthContext() 라는 firebase에서 제공하는 로그인 훅을 이용하였습니다. authContextProvider를 앱을 감싸게 하여 로그인을 했을 때 페이지가 다르게 보일 수 있도록 했습니다. 
+        이를 활용하여 관리자인지 일반 사용자인지 구분하여 UI가 각 이용자에 맞추어 바꾸었습니다.
+        모바일에서는 메뉴를 열었을 때, 사용자의 이름을 포함하여 인사하는 기능을 추가하였습니다.
+      </div>
     </div>
   </div>
   
@@ -33,20 +36,39 @@
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">시멘틱 마크업, 웹접근성</div>
-      <div class="detail-slider__text">시멘틱 마크업에도 많은 신경을 썼는데, 이는 코딩의 최적화와 웹사이트의 구조를 명확히 하기 위해서입니다. 
-        또한, 병원의 특성상 다양한 환자가 있습니다. 그 중에는 시각 장애인도 포함되는데 이러한 사람들도 웹 사이트를 편리하게 사용할 수 있을 수 있도록 웹 접근성에 신경썼습니다.</div>
+      <div class="detail-slider__title">Firebase Realtime DataBase(1)</div>
+      <div class="detail-slider__text">
+        Gallery에서 useParams 훅을 이용하여 메뉴에서 바로 들어올 수 있도록 하였습니다.
+        메뉴에서 createSearchParams를 이용하여 던진 값을 해당 카테고리로 갈 수 있도록 URLSearchParams를 사용하여 받는 방식입니다.
+        해당 갤러리는 인증받은 관리자만 Firebase Realtime DataBase에 데이터를 올릴 수 있도록 하였습니다.
+      </div>
     </div>
   </div>
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_03.png" alt="">
+      <img src="/images/projects/detail_01_04.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">자바스크립트</div>
-      <div class="detail-slider__text">자바스크립트를 활용하여 네비게이션 슬라이드 컨텐츠, 메뉴 바, 스크롤 기능을 구현했습니다. 이를 통해 사용자들이 웹사이트를 보다 쉽고 편리하게 탐색할 수 있도록 하였습니다.</div>
+      <div class="detail-slider__title">Firebase Realtime DataBase(2)</div>
+      <div class="detail-slider__text">
+        관리자가 데이터 베이스에 게시물을 올릴 수 있는 기능을 추가하였습니다. 날짜는 현재 날짜를 불러올 수 있도록 하고, 활동 사진을 여러 장을 선택하여 저장할 수 있도록 하였습니다.
+        저장한 사진은 Firebase에 storage로 저장한 후에 그 저장 이름을 불러와 gallery에 게시하도록 하였습니다.
+      </div>
+    </div>
+  </div>
+
+  <div class="detail-slider__item swiper-slide">
+    <div class="detail-slider__img">
+      <img src="/images/projects/detail_01_05.png" alt="">
+    </div>
+    <div class="detail-slider__content">
+      <!-- <span class="detail-slider__code">osung-jihyun</span> -->
+      <div class="detail-slider__title">기능 향상</div>
+      <div class="detail-slider__text">
+        swiper custom 하여 안정적이면서도 시각적으로도 아름다울 수 있도록 하였습니다. 카카오맵 API 추가하여 프로젝트에 연동해보았습니다. 또한, Json파일 이용하여 Json 파일에서 내용을 가져와 사이트를 구성하여 수정사항이 생길 때, Json 코드 하나만 수정하면 되어서 유지보수 용이하게 하였습니다.
+      </div>
     </div>
   </div>
   
