--- a/project_content/project_details/project_detail01.html
+++ b/project_content/project_details/project_detail01.html
@@ -67,7 +67,7 @@
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
       <div class="detail-slider__title">기능 향상</div>
       <div class="detail-slider__text">
-        swiper custom 하여 안정적이면서도 시각적으로도 아름다울 수 있도록 하였습니다. 카카오맵 API 추가하여 프로젝트에 연동해보았습니다. 또한, Json파일 이용하여 Json 파일에서 내용을 가져와 사이트를 구성하여 수정사항이 생길 때, Json 코드 하나만 수정하면 되어서 유지보수 용이하게 하였습니다.
+        swiper custom 하여 안정적이면서도 시각적으로도 아름다울 수 있도록 하였습니다. 카카오맵 API 추가하여 프로젝트에 연동해보았습니다. 또한, Json파일 이용하여 Json 파일에서 내용을 가져와 사이트를 구성하였습니다. 이후에 수정사항이 생길 때, Json 코드 하나만 수정하면 되어서 유지보수 용이하게 하였습니다.
       </div>
     </div>
   </div>
