--- a/project_content/project_overview04.html
+++ b/project_content/project_overview04.html
@@ -6,8 +6,9 @@
   <div class="project_infos">
     <p class="p_name">굿모닝 외과</p>
     <p class="p_bodytext">굿모닝 외과 웹 사이트를 제작하였습니다. <br/>
-      병원의 특성상 웹 접근성을 신경써서 제작하였습니다. <br/>
-      이와 같은 웹 사이트를 소개하는 글을 여기에 적겠습니다.</p>
+      다른 원장님께 은혜를 입어 사이트를 제작하게 되었습니다. <br/>
+      HTML, CSS, JavaScript를 연습하기 위하여 빠르게 만들었습니다.
+    </p>
     <div class="projects_skill">
       <ul>
         <li>Mobile App</li>
