--- a/project_content/project_overview05.html
+++ b/project_content/project_overview05.html
@@ -6,8 +6,8 @@
   <div class="project_infos">
     <p class="p_name">WOONTIN</p>
     <p class="p_bodytext">운동 루틴을 공유하는 웹앱을 제작하였습니다. <br/>
-      최근 운동에 대한 인기가 높은 사회적 분위기를 반영하여 제작했습니다. <br/>
-      이와 같은 웹 사이트를 소개하는 글을 여기에 적겠습니다.</p>
+      운동 루틴을 찾아보기 귀찮은 모든 사람들을 위해 제작했습니다. <br/>
+      아직 제작 중이라 미흡한 점이 많습니다.</p>
     <div class="projects_skill">
       <ul>
         <li>Mobile App</li>
