--- a/project_content/project_details/project_detail02.html
+++ b/project_content/project_details/project_detail02.html
@@ -3,50 +3,66 @@
 
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_01.png" alt="">
+      <img src="/images/projects/detail_02_01.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">기획 의도</div>
-      <div class="detail-slider__text">모두 원장님께 은혜를 베풀기 위해 만들었습니다. 
-        그렇지만 선물이라고 대충 만드는 것이 아닌 정성을 다해 다양한 것들을 신경써서 제작하고자 하였습니다.
-        병원의 특성에 맞추어 사용자 경험에 많은 신경을 썼습니다. 
-        그래서 사용자들이 직관적으로 웹사이트를 사용할 수 있도록 제작</div>
+      <div class="detail-slider__title">메인 페이지</div>
+      <div class="detail-slider__text">로고는 버려지는 것들을 재활용한다는 의미를 가진 브랜드의 아이덴티티를 살리기위한 메인 로고 애니메이션으로 배치하였습니다.
+        이때 marine serre 로고가 regenerated 라는 단어로 바뀌는 과정에서 겹치는 알파벳은 재구성되고 없는 알파벳만 추가되어 새로운 단어를 제시하여 글씨를 '재'활용합니다.
+      </div>
     </div>
   </div>
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_02.png" alt="">
+      <img src="/images/projects/detail_02_02.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">반응형, 적응형</div>
-      <div class="detail-slider__text">반응형 하드코딩은 부트스트랩과 같은 반응형 라이브러리를 사용하지 않고 진행했습니다. 이는 더욱 특화된 반응형 웹사이트를 제작하기 위해서입니다. 
-        또한, 적응형 웹사이트를 구현한 경험이 어려웠지만, 사용자들의 다양한 기기와 화면 크기에 맞춰 최상의 경험을 제공하기 위해 적응형을 채택했습니다.</div>
+      <div class="detail-slider__title">협업</div>
+      <div class="detail-slider__text">
+        git과 GitHub로 협업 작업을 진행하였습니다. 특정 부분을 작업하고 merge 하면서 발생한 충돌 문제와 같이, 다양한 시행착오가 있었습니다. 이를 통해서 어떻게 협업하는 것이 좋을지, 어떻게 효율적인 의사소통을 할 수 있는지 배웠습니다.
+      </div>
     </div>
   </div>
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_03.png" alt="">
+      <img src="/images/projects/detail_02_03.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">시멘틱 마크업, 웹접근성</div>
-      <div class="detail-slider__text">시멘틱 마크업에도 많은 신경을 썼는데, 이는 코딩의 최적화와 웹사이트의 구조를 명확히 하기 위해서입니다. 
-        또한, 병원의 특성상 다양한 환자가 있습니다. 그 중에는 시각 장애인도 포함되는데 이러한 사람들도 웹 사이트를 편리하게 사용할 수 있을 수 있도록 웹 접근성에 신경썼습니다.</div>
+      <div class="detail-slider__title">사용자 경험(UX)</div>
+      <div class="detail-slider__text">
+        위 페이지는 제가 주도적으로 코드를 작성한 페이지 중 하나입니다. 버튼을 눌렀을 때, 왼쪽 오른쪽 화살표가 비활성화될 수 있도록 하여 사용자 경험을 높였습니다.
+      </div>
     </div>
   </div>
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_03.png" alt="">
+      <img src="/images/projects/detail_02_04.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">자바스크립트</div>
-      <div class="detail-slider__text">자바스크립트를 활용하여 네비게이션 슬라이드 컨텐츠, 메뉴 바, 스크롤 기능을 구현했습니다. 이를 통해 사용자들이 웹사이트를 보다 쉽고 편리하게 탐색할 수 있도록 하였습니다.</div>
+      <div class="detail-slider__title">Ecofuturism</div>
+      <div class="detail-slider__text">
+        위 페이지는 제가 주도적으로 코드를 작성한 인터렉션 중 하나입니다. 에코퓨처리즘은 에코와 퓨처리스트 합성어로 마린세르 브랜드가 가장 중요하게 생각하는 신념입니다. 이와 관련된 다양한 가치들이 스크롤을 하면 바다 속으로 빠져들어, 해당 브랜드가 자연 친화적임을 강조하였습니다. 
+      </div>
+    </div>
+  </div>
+
+  <div class="detail-slider__item swiper-slide">
+    <div class="detail-slider__img">
+      <img src="/images/projects/detail_02_05.png" alt="">
+    </div>
+    <div class="detail-slider__content">
+      <!-- <span class="detail-slider__code">osung-jihyun</span> -->
+      <div class="detail-slider__title">의류 코어라인</div>
+      <div class="detail-slider__text">
+        위 페이지는 협업을 통해 코드를 작성한 인터렉션 중 하나입니다. 사진이 움직이면서 진열된 느낌과 쇼핑몰 느낌의 갤러리 효과를 주었습니다.
+      </div>
     </div>
   </div>
   
