--- a/project_content/project_details/project_detail04.html
+++ b/project_content/project_details/project_detail04.html
@@ -3,7 +3,7 @@
 
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_01.png" alt="">
+      <img src="/images/projects/detail_04_01.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
@@ -11,13 +11,13 @@
       <div class="detail-slider__text">모두 원장님께 은혜를 베풀기 위해 만들었습니다. 
         그렇지만 선물이라고 대충 만드는 것이 아닌 정성을 다해 다양한 것들을 신경써서 제작하고자 하였습니다.
         병원의 특성에 맞추어 사용자 경험에 많은 신경을 썼습니다. 
-        그래서 사용자들이 직관적으로 웹사이트를 사용할 수 있도록 제작</div>
+        그래서 사용자들이 직관적으로 웹사이트를 사용할 수 있도록 제작하였습니다.</div>
     </div>
   </div>
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_02.png" alt="">
+      <img src="/images/project_list_04.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
@@ -29,7 +29,7 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_03.png" alt="">
+      <img src="/images/projects/detail_04_03.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
@@ -41,12 +41,12 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_03.png" alt="">
+      <img src="/images/projects/detail_04_04.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">자바스크립트</div>
-      <div class="detail-slider__text">자바스크립트를 활용하여 네비게이션 슬라이드 컨텐츠, 메뉴 바, 스크롤 기능을 구현했습니다. 이를 통해 사용자들이 웹사이트를 보다 쉽고 편리하게 탐색할 수 있도록 하였습니다.</div>
+      <div class="detail-slider__title">JavaScript 객체</div>
+      <div class="detail-slider__text">자바스크립트를 활용하여 네비게이션 슬라이드 컨텐츠, 메뉴 바, 스크롤 기능을 구현했습니다. 이를 통해 사용자들이 웹사이트를 보다 쉽고 편리하게 탐색할 수 있도록 하였습니다. 그리고 자바스크립트의 객체를 활용하여 함수를 쉽게 조작하고 사용할 수 있도록 하였습니다.</div>
     </div>
   </div>
   
