--- a/project_content/project_details/project_detail05.html
+++ b/project_content/project_details/project_detail05.html
@@ -3,50 +3,53 @@
 
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_01.png" alt="">
+      <img src="/images/project-05-main.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
       <div class="detail-slider__title">기획 의도</div>
-      <div class="detail-slider__text">모두 원장님께 은혜를 베풀기 위해 만들었습니다. 
-        그렇지만 선물이라고 대충 만드는 것이 아닌 정성을 다해 다양한 것들을 신경써서 제작하고자 하였습니다.
-        병원의 특성에 맞추어 사용자 경험에 많은 신경을 썼습니다. 
-        그래서 사용자들이 직관적으로 웹사이트를 사용할 수 있도록 제작</div>
+      <div class="detail-slider__text">
+        사용자들의 운동 루틴을 공유하는 사이트가 있으면 좋겠다는 생각에 제작하게 되었습니다.
+      </div>
     </div>
   </div>
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_02.png" alt="">
+      <img src="/images/project_list_05.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
       <div class="detail-slider__title">반응형, 적응형</div>
-      <div class="detail-slider__text">반응형 하드코딩은 부트스트랩과 같은 반응형 라이브러리를 사용하지 않고 진행했습니다. 이는 더욱 특화된 반응형 웹사이트를 제작하기 위해서입니다. 
-        또한, 적응형 웹사이트를 구현한 경험이 어려웠지만, 사용자들의 다양한 기기와 화면 크기에 맞춰 최상의 경험을 제공하기 위해 적응형을 채택했습니다.</div>
+      <div class="detail-slider__text">
+        모바일 전용 웹앱이기는 하지만 다양한 사용자들이 이용할 것을 고려하여 반응형도 신경을 썼습니다.
+      </div>
     </div>
   </div>
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_03.png" alt="">
+      <img src="/images/projects/detail_05_03.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">시멘틱 마크업, 웹접근성</div>
-      <div class="detail-slider__text">시멘틱 마크업에도 많은 신경을 썼는데, 이는 코딩의 최적화와 웹사이트의 구조를 명확히 하기 위해서입니다. 
-        또한, 병원의 특성상 다양한 환자가 있습니다. 그 중에는 시각 장애인도 포함되는데 이러한 사람들도 웹 사이트를 편리하게 사용할 수 있을 수 있도록 웹 접근성에 신경썼습니다.</div>
+      <div class="detail-slider__title">Firebase Realtime Database</div>
+      <div class="detail-slider__text">
+        firebase Realtime Database와 storage를 활용하여 사용자들이 실시간으로 자신의 운동 루틴을 공유할 수 있도록 했습니다.
+      </div>
     </div>
   </div>
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_01_03.png" alt="">
+      <img src="/images/projects/detail_05_04.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">자바스크립트</div>
-      <div class="detail-slider__text">자바스크립트를 활용하여 네비게이션 슬라이드 컨텐츠, 메뉴 바, 스크롤 기능을 구현했습니다. 이를 통해 사용자들이 웹사이트를 보다 쉽고 편리하게 탐색할 수 있도록 하였습니다.</div>
+      <div class="detail-slider__title">Firebase Authentication</div>
+      <div class="detail-slider__text">
+        Firebase Authentication 사용하여, 사용자들의 이름을 가지고 운동 루틴을 공유할 수 있도록 하였습니다.
+      </div>
     </div>
   </div>
   
