--- a/project_content/project_overview02.html
+++ b/project_content/project_overview02.html
@@ -5,9 +5,9 @@
   </div>
   <div class="project_infos">
     <p class="p_name">마린세르</p>
-    <p class="p_bodytext">팀프로젝트로 마린세르 브랜드와 관련된 웹을 제작하였습니다. <br/>
-      최근 실버사업이 인기가 높은 사회적 분위기를 반영하여 제작했습니다. <br/>
-      이와 같은 웹 사이트를 소개하는 글을 여기에 적겠습니다.</p>
+    <p class="p_bodytext">팀프로젝트로 마린세르 브랜드 프로모션 페이지를 제작하였습니다. <br/>
+      요즘 화제가 되고 있는 버려지는 옷들에 대한 환경문제에 초점을 맞추게 되었고, <br/>
+      이러한 옷들을 재활용하는 브랜드를 소개하고자 이 페이지를 기획하였습니다.</p>
     <div class="projects_skill">
       <ul>
         <li>Mobile App</li>
