--- a/project_content/project_overview03.html
+++ b/project_content/project_overview03.html
@@ -6,8 +6,9 @@
   <div class="project_infos">
     <p class="p_name">동의보감 한의원</p>
     <p class="p_bodytext">동의보감 한의원 웹 사이트를 제작하였습니다. <br/>
-      병원의 특성상 웹 접근성을 신경써서 제작하였습니다.<br/>
-      이와 같은 웹 사이트를 소개하는 글을 여기에 적겠습니다.</p>
+      은혜를 입은 원장님께 보답하고자 사이트를 제작하였습니다.<br/>
+      병원의 특성상 웹 접근성을 신경썼습니다.
+    </p>
     <div class="projects_skill">
       <ul>
         <li>Mobile App</li>
