--- a/project_content/project_overview02.html
+++ b/project_content/project_overview02.html
@@ -5,8 +5,8 @@
   </div>
   <div class="project_infos">
     <p class="p_name">마린세르</p>
-    <p class="p_bodytext">팀프로젝트로 마린세르 브랜드 프로모션 페이지를 제작하였습니다. <br/>
-      요즘 화제가 되고 있는 버려지는 옷들에 대한 환경문제에 초점을 맞추게 되었고, <br/>
+    <p class="p_bodytext">팀프로젝트로 마린세르 브랜드 프로모션 페이지를 제작하였습니다.
+      요즘 화제가 되고 있는 버려지는 옷들에 대한 환경문제에 초점을 맞추게 되었고,
       이러한 옷들을 재활용하는 브랜드를 소개하고자 이 페이지를 기획하였습니다.</p>
     <div class="projects_skill">
       <ul>
