--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <h2 class="hidden">오성 지현 Skills and Stacks</h2>
         <div class="title_wrap">
           <p class="subtitle" id="skill">Skills & Stacks</p>
-          <svg class="ss_title_svg " xmlns="http://www.w3.org/2000/svg" width="433" height="20" viewBox="0 0 433 20" fill="none">
+          <svg class="ss_title_svg" xmlns="http://www.w3.org/2000/svg" width="433" height="20" viewBox="0 0 433 20" fill="none">
             <path class="dashable-path" d="M10 20C4.47714 20 4.82823e-07 15.5229 0 10C-4.82823e-07 4.47719 4.47714 3.74627e-05 10 3.69798e-05L10 20ZM433 20L10 20L10 3.69798e-05L433 0L433 20Z" fill="url(#paint0_linear_59_432)"/>
             <defs>
               <linearGradient id="paint0_linear_59_432" x1="10" y1="60" x2="433" y2="60" gradientUnits="userSpaceOnUse">
@@ -260,7 +260,7 @@
           <div class="project_orange_stage_inner">
             <div class="title_wrap">
               <p class="subtitle" id="projects">Projects</p>
-              <svg xmlns="http://www.w3.org/2000/svg" width="260" height="20" viewBox="0 0 260 20" fill="none">
+              <svg class="p_title_svg" xmlns="http://www.w3.org/2000/svg" width="260" height="20" viewBox="0 0 260 20" fill="none">
                 <path d="M250 20C255.523 20 260 15.5228 260 10C260 4.47715 255.523 0 250 0V20ZM0 20H250V0H0V20Z" fill="url(#paint0_linear_59_435)"/>
                 <defs>
                   <linearGradient id="paint0_linear_59_435" x1="250" y1="59.9975" x2="2.58329e-06" y2="59.9975" gradientUnits="userSpaceOnUse">
@@ -323,7 +323,7 @@
         <div class="about_me_inner">
           <div class="title_wrap">
             <p class="subtitle" id="aboutme">About Me</p>
-            <svg xmlns="http://www.w3.org/2000/svg" width="275" height="21" viewBox="0 0 275 21" fill="none">
+            <svg class="p_title_svg" xmlns="http://www.w3.org/2000/svg" width="275" height="21" viewBox="0 0 275 21" fill="none">
               <path d="M264.962 20.9999C270.485 21.0209 274.979 16.5607 275 11.0379C275.021 5.51509 270.561 1.02101 265.038 1.00009L264.962 20.9999ZM0.962121 19.9999L264.962 20.9999L265.038 1.00009L1.03788 7.15256e-05L0.962121 19.9999Z" fill="url(#paint0_linear_59_436)"/>
               <defs>
                 <linearGradient id="paint0_linear_59_436" x1="264.811" y1="60.9971" x2="0.810616" y2="59.9971" gradientUnits="userSpaceOnUse">
