--- a/index.html
+++ b/index.html
@@ -244,6 +244,14 @@
         <div class="ss_bg">
           <img class="ss_bg_circle" src="/images/bg_skills_stacks_circle.png" alt="배경"/>
           <img class="ss_bg_text" src="/images/bg_skills_stacks_text.png" alt="배경"/>
+          <div class="ss_svg_wrapper">
+            <svg class="bg_ss_circle_up" xmlns="http://www.w3.org/2000/svg" width="410" height="558" viewBox="0 0 410 558" fill="none">
+              <path d="M0.472395 26.5349C146.89 -38.3779 318.207 27.6947 383.12 174.112C448.032 320.53 381.96 491.847 235.542 556.759" stroke="#003CFF"/>
+            </svg>
+            <svg class="bg_ss_circle_down" xmlns="http://www.w3.org/2000/svg" width="538" height="561" viewBox="0 0 538 561" fill="none">
+              <path d="M498.19 0.484877C591.417 195.218 509.13 428.655 314.397 521.882C119.664 615.109 -113.773 532.822 -207 338.089" stroke="#003CFF"/>
+            </svg>
+          </div>
         </div>
       </div>
     </section>
