--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
   <meta property="og:site_name" content="오성 포트폴리오" />
-  <meta property="og:description" content="오성지현 포트폴리오를 보고 칭찬해주세요." />
+  <meta property="og:description" content="오성지현의 다양한 프로젝트를 소개하는 포트폴리오 사이트입니다." />
+
+  <meta name="Keywords" content="오성지현, 최지현, 포트폴리오, 오성지현 포트폴리오" />
+  <meta name="description" content="오성지현의 다양한 프로젝트를 보고 칭찬해주세요." />
 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,7 +46,7 @@
     <header>
       <h1 class="hidden">오성지현 portfolio</h1>
       <div id="header_inner">
-        <a>
+        <a href="#">
           <div id="logo">
             <p id="logo_title">osung</p>
           </div>
@@ -51,9 +54,9 @@
         <div class="menu">
           <ul class="menu_list">
             <!-- <li data-target="skills_and_stacks">Skills & Stacks<div class="svg_line"></div></li> -->
-            <li data-target="skills_and_stacks">Skills & Stacks<img src="/images/header_svg-01.png"/></li>
-            <li data-target="projects">Projects<img src="/images/header_svg-02.png"/></li>
-            <li data-target="about_me">About Me<img src="/images/header_svg-03.png"/></li>
+            <li data-target="skills_and_stacks">Skills & Stacks<img src="/images/header_svg-01.png" alt="Skills & Stacks"/></li>
+            <li data-target="projects">Projects<img src="/images/header_svg-02.png" alt="projects"/></li>
+            <li data-target="about_me">About Me<img src="/images/header_svg-03.png" alt="about me"/></li>
           </ul>
           <!-- svg 자리 -->
         </div>
@@ -108,7 +111,7 @@
           <p class="mt_title">GO GETTER</p>
           <p class="mt_text">
             안녕하세요. "Go-Getter 최지현"입니다. Go-Getter 란 망설임 없이 무엇인가 도전을 하고, 성공을 위한 투지를 가지고, 야심을 가지는 열정적인 사람을 뜻합니다. 
-            저는 다양한 분야에 끊임없이 도전하고 앞으로 달려나가는 Go-Getter로 살아가기 위해 최선을 다하고 있습니다. 한 예시로 육상 100m 아마추어 1등 기록을 가지고 있습니다.
+            저는 다양한 분야에 끊임없이 도전하고 앞으로 달려나가는 Go-Getter로 살아가기 위해 최선을 다하고 있습니다. 운동 분야에서도 육상 100m 아마추어 1등 기록을 가지고 있습니다.
           </p>
         </div>
         <div class="mt_bg_text">
