--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <header>
       <h1 class="hidden">오성지현 portfolio</h1>
       <div id="header_inner">
-        <a href="#">
+        <a href="#"> ]
           <div id="logo">
             <p id="logo_title">osung</p>
           </div>
