seo improve accessibility

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="menu">
           <ul class="menu_list">
             <!-- <li data-target="skills_and_stacks">Skills & Stacks<div class="svg_line"></div></li> -->
-            <li data-target="skills_and_stacks">Skills & Stacks<img src="/images/header_svg-01.png" alt="Skills & Stacks"/></li>
+            <li data-target="skills_and_stacks">Skills & Stacks<img src="/images/header_svg-01.png" alt="Skills Stacks"/></li>
             <li data-target="projects">Projects<img src="/images/header_svg-02.png" alt="projects"/></li>
             <li data-target="about_me">About Me<img src="/images/header_svg-03.png" alt="about me"/></li>
           </ul>
@@ -401,15 +401,21 @@
         <div class="footer_inner">
           <p class="f_title">Contact</p>
           <ul class="sns_list">
-            <a href="https://www.instagram.com/osung_jihyun/" target="_blank">
-              <li><i class="fa-brands fa-instagram"></i></li>
-            </a>
-            <a href="https://www.linkedin.com/in/%EC%A7%80%ED%98%84-%EC%B5%9C-0b2661283/" target="_blank">
-              <li><i class="fa-brands fa-linkedin"></i></li>
-            </a>
-            <a href="https://github.com/Choi-Jihyun" target="_blank">
-              <li><i class="fa-brands fa-github"></i></li>
-            </a>
+            <li>
+              <a href="https://www.instagram.com/osung_jihyun/" aria-label="오성지현의 인스타그램 바로가기" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/%EC%A7%80%ED%98%84-%EC%B5%9C-0b2661283/" aria-label="오성지현의 링크드인 바로가기" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/Choi-Jihyun" aria-label="오성지현의 깃허브 바로가기" target="_blank">
+                <i class="fa-brands fa-github"></i>
+              </a>
+            </li>
 
             <li id="email"><i class="fa-regular fa-envelope"></i></li>
             <li id="bank"><i class="fa-solid fa-dollar-sign"></i></li>
