--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <div class="menu">
           <ul class="menu_list">
             <!-- <li data-target="skills_and_stacks">Skills & Stacks<div class="svg_line"></div></li> -->
-            <li data-target="skills_and_stacks">Skills & Stacks<img src="/images/header_svg-01.png" alt="Skills Stacks"/></li>
-            <li data-target="projects">Projects<img src="/images/header_svg-02.png" alt="projects"/></li>
-            <li data-target="about_me">About Me<img src="/images/header_svg-03.png" alt="about me"/></li>
+            <li data-target="skills_and_stacks">Skills & Stacks<img src="/images/header_svg-01.png" alt="배경이미지"/></li>
+            <li data-target="projects">Projects<img src="/images/header_svg-02.png" alt="배경이미지"/></li>
+            <li data-target="about_me">About Me<img src="/images/header_svg-03.png" alt="배경이미지"/></li>
           </ul>
           <!-- svg 자리 -->
         </div>
