--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </ul>
           </div>
           <div class="my_pic">
-            <img src="/images/jihyun_picture.png" alt="최지현의 사진"/>
+            <img src="/images/jihyun_picture.webp" alt="최지현의 사진"/>
             <div class="img_blue_cover"></div>
             <div class="bi_bg_circle_yellow"></div>
           </div>
