--- a/project_content/project_details/project_detail05.html
+++ b/project_content/project_details/project_detail05.html
@@ -3,7 +3,7 @@
 
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/project-05-main.png" alt="">
+      <img src="/images/project-05-main.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
