--- a/project_content/project_overview02.html
+++ b/project_content/project_overview02.html
@@ -1,6 +1,6 @@
 <div>
   <div class="project_main_pic">
-    <img src="/images/project-02-main.png" alt="마린세르 메인 사진" />
+    <img src="/images/project-02-main.webp" alt="마린세르 메인 사진" />
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
