--- a/project_content/project_overview05.html
+++ b/project_content/project_overview05.html
@@ -1,6 +1,6 @@
 <div>
   <div class="project_main_pic">
-    <img src="/images/project-05-main.png" alt="운동 루틴 메인 사진" />
+    <img src="/images/project-05-main.webp" alt="운동 루틴 메인 사진" />
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
