--- a/project_content/project_overview06.html
+++ b/project_content/project_overview06.html
@@ -1,6 +1,6 @@
 <div>
   <div class="project_main_pic">
-    <img src="/images/project-06-main.png" alt="포트폴리오 메인 사진" />
+    <img src="/images/project-06-main.webp" alt="포트폴리오 메인 사진" />
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
