improve the accessibility by ul-li

--- a/project_content/project_overview01.html
+++ b/project_content/project_overview01.html
@@ -18,8 +18,8 @@
     </div>
     <div class="project_links">
       <ul>
-        <a href="https://lovesilver.netlify.app/" target='_blank'><li><i class="fa-solid fa-globe"></i> 데모 웹사이트</li></a>
-        <a href="https://github.com/Choi-Jihyun/LoveSilver-ReactProject01" target='_blank'><li><i class="fa-brands fa-github"></i> GitHub</li></a>
+        <li><a href="https://lovesilver.netlify.app/" target='_blank'><i class="fa-solid fa-globe"></i> 데모 웹사이트</a></li>
+        <li><a href="https://github.com/Choi-Jihyun/LoveSilver-ReactProject01" target='_blank'><i class="fa-brands fa-github"></i> GitHub</a></li>
       </ul>
     </div>
   </div>
