--- a/project_content/project_overview04.html
+++ b/project_content/project_overview04.html
@@ -19,8 +19,8 @@
     </div>
     <div class="project_links">
       <ul>
-        <a href="http://osungcjh.dothome.co.kr/goodmorning/" target="_blank"><li><i class="fa-solid fa-globe"></i> 데모 웹사이트</li></a>
-        <a href="https://github.com/Choi-Jihyun/web_goodmorning" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
+        <li><a href="http://osungcjh.dothome.co.kr/goodmorning/" target="_blank"><i class="fa-solid fa-globe"></i> 데모 웹사이트</a></li>
+        <li><a href="https://github.com/Choi-Jihyun/web_goodmorning" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a></li>
       </ul>
     </div>
   </div>
