--- a/project_content/project_overview06.html
+++ b/project_content/project_overview06.html
@@ -19,7 +19,7 @@
     </div>
     <div class="project_links">
       <ul>
-        <a href="https://github.com/Choi-Jihyun/portfolio-osung" target="_blank"><li><i class="fa-brands fa-github"></i> GitHub</li></a>
+        <li><a href="https://github.com/Choi-Jihyun/portfolio-osung" target="_blank"><i class="fa-brands fa-github"></i> GitHub</a></li>
       </ul>
     </div>
   </div>
