--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <div class="menu">
           <ul class="menu_list">
             <!-- <li data-target="skills_and_stacks">Skills & Stacks<div class="svg_line"></div></li> -->
-            <li data-target="skills_and_stacks">Skills & Stacks<img src="/images/header_svg-01.png" alt="배경이미지"/></li>
-            <li data-target="projects">Projects<img src="/images/header_svg-02.png" alt="배경이미지"/></li>
-            <li data-target="about_me">About Me<img src="/images/header_svg-03.png" alt="배경이미지"/></li>
+            <li data-target="skills_and_stacks">Skills & Stacks<img src="/images/header_svg-01.webp" alt="배경이미지"/></li>
+            <li data-target="projects">Projects<img src="/images/header_svg-02.webp" alt="배경이미지"/></li>
+            <li data-target="about_me">About Me<img src="/images/header_svg-03.webp" alt="배경이미지"/></li>
           </ul>
           <!-- svg 자리 -->
         </div>
@@ -245,8 +245,8 @@
           </ul>
         </div>
         <div class="ss_bg">
-          <img class="ss_bg_circle" src="/images/bg_skills_stacks_circle.png" alt="배경"/>
-          <img class="ss_bg_text" src="/images/bg_skills_stacks_text.png" alt="배경"/>
+          <img class="ss_bg_circle" src="/images/bg_skills_stacks_circle.webp" alt="배경"/>
+          <img class="ss_bg_text" src="/images/bg_skills_stacks_text.webp" alt="배경"/>
           <div class="ss_svg_wrapper">
             <svg class="bg_ss_circle_up" xmlns="http://www.w3.org/2000/svg" width="410" height="558" viewBox="0 0 410 558" fill="none">
               <path d="M0.472395 26.5349C146.89 -38.3779 318.207 27.6947 383.12 174.112C448.032 320.53 381.96 491.847 235.542 556.759" stroke="#003CFF"/>
