--- a/project_content/project_overview01.html
+++ b/project_content/project_overview01.html
@@ -10,7 +10,7 @@
       React.js 기반으로 제작하고 Firebase로 기능을 강화했습니다.</p>
     <div class="projects_skill">
       <ul>
-        <li>Mobile App</li>
+        <li>Mobile</li>
         <li>Web</li>
         <li>React.js</li>
         <li>Firebase</li>
