--- a/project_content/project_overview02.html
+++ b/project_content/project_overview02.html
@@ -10,7 +10,7 @@
       이러한 옷들을 재활용하는 브랜드를 소개하고자 이 페이지를 기획하였습니다.</p>
     <div class="projects_skill">
       <ul>
-        <li>Mobile App</li>
+        <li>Mobile</li>
         <li>Web</li>
         <li>git 협업</li>
         <li>JavaScript</li>
