--- a/project_content/project_overview05.html
+++ b/project_content/project_overview05.html
@@ -10,7 +10,7 @@
       아직 제작 중이라 미흡한 점이 많습니다.</p>
     <div class="projects_skill">
       <ul>
-        <li>Mobile App</li>
+        <li>Mobile</li>
         <li>React.js</li>
         <li>Scss</li>
       </ul>
