--- a/project_content/project_overview06.html
+++ b/project_content/project_overview06.html
@@ -10,7 +10,7 @@
     </p>
     <div class="projects_skill">
       <ul>
-        <li>Mobile App</li>
+        <li>Mobile</li>
         <li>Web</li>
         <li>TypeScript</li>
         <li>Scss</li>
