--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
 <head>
-  <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
+  <!-- <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" /> -->
+  <meta property="og:image" content="/images/thumbnail.png" />
   <meta property="og:site_name" content="오성 포트폴리오" />
   <meta property="og:description" content="오성지현의 다양한 프로젝트를 소개하는 포트폴리오 사이트입니다." />
 
