--- a/project_content/project_details/project_detail04.html
+++ b/project_content/project_details/project_detail04.html
@@ -17,7 +17,7 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/project_list_04.png" alt="">
+      <img src="/images/project_list_04.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
