--- a/project_content/project_details/project_detail06.html
+++ b/project_content/project_details/project_detail06.html
@@ -14,7 +14,7 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/project_list_06.png" alt="">
+      <img src="/images/project_list_06.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
@@ -40,8 +40,8 @@
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">자바스크립트</div>
-      <div class="detail-slider__text">자바스크립트를 활용하여 네비게이션 슬라이드 컨텐츠, 메뉴 바, 스크롤 기능을 구현했습니다. 이를 통해 사용자들이 웹사이트를 보다 쉽고 편리하게 탐색할 수 있도록 하였습니다.</div>
+      <div class="detail-slider__title">Accessibility</div>
+      <div class="detail-slider__text">접근성을 높이기 위해 많은 노력을 했습니다. 먼저, axios를 사용하여 사용자에 따라서 필요한 정보만 불러들일 수 있도록 하여, 초기 로딩 웹 페이지 로딩 속도를 높였습니다. 또한, png 파일을 webp 파일 형식으로 바꾸어 사이트의 속도를 높였습니다.</div>
     </div>
   </div>
   
