--- a/project_content/project_overview04.html
+++ b/project_content/project_overview04.html
@@ -11,7 +11,7 @@
     </p>
     <div class="projects_skill">
       <ul>
-        <li>Mobile App</li>
+        <li>Mobile</li>
         <li>Web</li>
         <li>HTML/CSS</li>
         <li>JavaScript</li>
