complete! except header osung

--- a/project_content/project_overview03.html
+++ b/project_content/project_overview03.html
@@ -1,6 +1,7 @@
 <div>
   <div class="project_main_pic">
     <img src="/images/project-03-main.webp" alt="동의보감 한의원 메인 사진" />
+    <p class="click_me">click to see more details</p>
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
@@ -11,8 +12,8 @@
     </p>
     <div class="projects_skill">
       <ul>
-        <li>Mobile</li>
         <li>Web</li>
+        <li>Mobile</li>
         <li>HTML/CSS</li>
         <li>JavaScript</li>
       </ul>
