--- a/project_content/project_overview05.html
+++ b/project_content/project_overview05.html
@@ -1,6 +1,7 @@
 <div>
   <div class="project_main_pic">
     <img src="/images/project-05-main.webp" alt="운동 루틴 메인 사진" />
+    <p class="click_me">click to see more details</p>
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
@@ -11,7 +12,7 @@
     <div class="projects_skill">
       <ul>
         <li>Mobile</li>
-        <li>React.js</li>
+        <li>React</li>
         <li>Scss</li>
       </ul>
     </div>
