--- a/project_content/project_details/project_detail01.html
+++ b/project_content/project_details/project_detail01.html
@@ -67,7 +67,7 @@
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
       <div class="detail-slider__title">차별화</div>
       <div class="detail-slider__text">
-        swiper custom 하여 안정적이면서도 more beautiful 합니다. 카카오맵 API 추가하여 프로젝트에 연동했습니다. 또한, Json파일 이용하여 Json 파일에서 내용을 가져와 사이트를 구성하였습니다. 이후에 수정사항이 생길 때, Json 코드 하나만 수정하게 하여 유지보수가 용이합니다. 상단 메뉴도 다른 웹 사이트들과 다르게 기능적으로도 시각적으로도 gorgeous 합니다.
+        swiper custom 하여 안정적이면서도 more beautiful 합니다. 상단 메뉴도 타 사이트들과 다르게 기능적으로도 시각적으로도 gorgeous 합니다. 카카오맵 API 추가하여 프로젝트에 연동했습니다. 또한, Json파일 이용하여 Json 파일에서 내용을 가져와 사이트를 구성하였습니다. 이후에 수정사항이 생길 때, Json 코드 하나만 수정하게 하여 유지보수가 용이합니다. 
       </div>
     </div>
   </div>
