--- a/project_content/project_overview01.html
+++ b/project_content/project_overview01.html
@@ -1,6 +1,7 @@
 <div>
   <div class="project_main_pic">
     <img src="/images/project-01-main.webp" alt="Love Silver 주야간보호센터 메인 사진" />
+    <p class="click_me">click to see more details</p>
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
@@ -10,9 +11,9 @@
       React.js 기반으로 제작하고 Firebase로 기능을 강화했습니다.</p>
     <div class="projects_skill">
       <ul>
-        <li>Mobile</li>
         <li>Web</li>
-        <li>React.js</li>
+        <li>Mobile</li>
+        <li>React</li>
         <li>Firebase</li>
       </ul>
     </div>
