--- a/project_content/project_overview02.html
+++ b/project_content/project_overview02.html
@@ -1,6 +1,7 @@
 <div>
   <div class="project_main_pic">
     <img src="/images/project-02-main.webp" alt="마린세르 메인 사진" />
+    <p class="click_me">click to see more details</p>
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
@@ -10,9 +11,9 @@
       이러한 옷들을 재활용하는 브랜드를 소개하고자 이 페이지를 기획하였습니다.</p>
     <div class="projects_skill">
       <ul>
-        <li>Mobile</li>
         <li>Web</li>
-        <li>git 협업</li>
+        <li>git</li>
+        <li>Team</li>
         <li>JavaScript</li>
       </ul>
     </div>
