--- a/project_content/project_overview06.html
+++ b/project_content/project_overview06.html
@@ -1,6 +1,7 @@
 <div>
   <div class="project_main_pic">
     <img src="/images/project-06-main.webp" alt="포트폴리오 메인 사진" />
+    <p class="click_me">click to see more details</p>
     <div class="mouseover"></div>
   </div>
   <div class="project_infos">
@@ -10,10 +11,10 @@
     </p>
     <div class="projects_skill">
       <ul>
-        <li>Mobile</li>
         <li>Web</li>
-        <li>TypeScript</li>
+        <li>Mobile</li>
         <li>Scss</li>
+        <li>TypeScript</li>
         <li>SEO 최적화</li>
       </ul>
     </div>
