project background fix

--- a/index.html
+++ b/index.html
@@ -403,17 +403,17 @@
           <p class="f_title">Contact</p>
           <ul class="sns_list">
             <li>
-              <a href="https://www.instagram.com/osung_jihyun/" aria-label="오성지현의 인스타그램 바로가기" target="_blank">
+              <a href="https://www.instagram.com/osung_jihyun/" aria-label="오성지현의 인스타그램 바로가기">
                 <i class="fa-brands fa-instagram"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/%EC%A7%80%ED%98%84-%EC%B5%9C-0b2661283/" aria-label="오성지현의 링크드인 바로가기" target="_blank">
+              <a href="https://www.linkedin.com/in/%EC%A7%80%ED%98%84-%EC%B5%9C-0b2661283/" aria-label="오성지현의 링크드인 바로가기">
                 <i class="fa-brands fa-linkedin"></i>
               </a>
             </li>
             <li>
-              <a href="https://github.com/Choi-Jihyun" aria-label="오성지현의 깃허브 바로가기" target="_blank">
+              <a href="https://github.com/Choi-Jihyun" aria-label="오성지현의 깃허브 바로가기">
                 <i class="fa-brands fa-github"></i>
               </a>
             </li>
