--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <li><p>React.js</p></li>
             <li><p>Tailwind CSS</p></li>
             <li><p>TypeScript</p></li>
-            <li><p>Redux</p></li>
+            <li><p>Next.js</p></li>
           </ul>
         </div>
         <div class="etc_skills_wrap">
@@ -293,6 +293,7 @@
           <div class="projects_list_container">
             <ul class="project_list">
               <li class="selected"></li>
+              <li></li>
               <li></li>
               <li></li>
               <li></li>
