--- a/project_content/project_details/project_detail06.html
+++ b/project_content/project_details/project_detail06.html
@@ -29,7 +29,7 @@
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
-      <div class="detail-slider__title">SEO 최적화</div>
+      <div class="detail-slider__title">SEO 최적화(1)</div>
       <div class="detail-slider__text">SEO 최적화를 위해 제가 만든 다른 웹사이트도 적용한 메타 태그 최적화뿐만 아니라 다양한 방법을 사용하여 SEO 최적화에 신경을 썼습니다. HTTPS를 사용하여 웹사이트를 안전하게 유지하여 보안 문제를 강화하였습니다. 또한, XML 사이트맵을 생성하고 Google Search Console에 제출하여 검색 엔진이 웹사이트의 페이지를 쉽게 색인화할 수 있도록 하였습니다.</div>
     </div>
   </div>
@@ -37,6 +37,17 @@
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
       <img src="/images/projects/detail_06_04.png" alt="">
+    </div>
+    <div class="detail-slider__content">
+      <!-- <span class="detail-slider__code">osung-jihyun</span> -->
+      <div class="detail-slider__title">SEO 최적화(2)</div>
+      <div class="detail-slider__text">구글 검색시 제 포트폴리오 사이트가 최상단에 위치하는데 성공하였습니다!</div>
+    </div>
+  </div>
+  
+  <div class="detail-slider__item swiper-slide">
+    <div class="detail-slider__img">
+      <img src="/images/projects/detail_06_05.png" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
