--- a/project_content/project_overview01.html
+++ b/project_content/project_overview01.html
@@ -6,8 +6,9 @@
   </div>
   <div class="project_infos">
     <p class="p_name">Love Silver 주야간보호센터</p>
-    <p class="p_bodytext">주야간보호센터와 관련된 웹앱을 제작했습니다.<br/>
-      최근 대한민국 노인 비율의 증가로 인해 실버 사업이 각광받고 있습니다. 실버 시장이 커지기에, 이와 같은 사이트를 제작해보았습니다.
+    <p class="p_term">2023.07.26 ~ 08.22</p>
+    <p class="p_bodytext">React를 활용해 주야간보호센터와 관련된 웹앱을 제작했습니다.<br/>
+      최근 대한민국 노인 비율의 증가로 인해 실버 사업이 각광받고 있습니다. 실버 시장이 커지기에, 이와 같은 사이트를 제작하게 되었습니다.
       React.js 기반으로 제작하고 Firebase로 기능을 강화했습니다.</p>
     <div class="projects_skill">
       <ul>
