--- a/project_content/project_overview04.html
+++ b/project_content/project_overview04.html
@@ -6,6 +6,7 @@
   </div>
   <div class="project_infos">
     <p class="p_name">굿모닝 외과</p>
+    <p class="p_term">2023.06.19 ~ 06.23</p>
     <p class="p_bodytext">굿모닝 외과 웹 사이트를 제작하였습니다. <br/>
       다른 원장님께 은혜를 입어 사이트를 제작하게 되었습니다. <br/>
       HTML, CSS, JavaScript를 연습하기 위하여 빠르게 만들었습니다.
