--- a/project_content/project_overview05.html
+++ b/project_content/project_overview05.html
@@ -6,9 +6,10 @@
   </div>
   <div class="project_infos">
     <p class="p_name">WOONTIN</p>
+    <p class="p_term">2023.07.26 ~ (제작 중)</p>
     <p class="p_bodytext">운동 루틴을 공유하는 웹앱을 제작하였습니다. <br/>
       운동 루틴을 찾아보기 귀찮은 모든 사람들을 위해 제작했습니다. <br/>
-      아직 제작 중이라 미흡한 점이 많습니다.</p>
+      현재 제작 중입니다.</p>
     <div class="projects_skill">
       <ul>
         <li>Mobile</li>
