--- a/project_content/project_details/project_detail06.html
+++ b/project_content/project_details/project_detail06.html
@@ -3,7 +3,7 @@
 
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_06_01.png" alt="">
+      <img src="/images/projects/detail_06_01.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
@@ -25,7 +25,7 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_06_03.png" alt="">
+      <img src="/images/projects/detail_06_03.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
@@ -36,7 +36,7 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_06_04.png" alt="">
+      <img src="/images/projects/detail_06_04.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
@@ -47,12 +47,12 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_06_05.png" alt="">
+      <img src="/images/projects/detail_06_05.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
       <div class="detail-slider__title">Accessibility</div>
-      <div class="detail-slider__text">접근성을 높이기 위해 많은 노력을 했습니다. 먼저, axios를 사용하여 사용자에 따라서 필요한 정보만 불러들일 수 있도록 하여, 초기 로딩 웹 페이지 로딩 속도를 높였습니다. 또한, png 파일을 webp 파일 형식으로 바꾸어 사이트의 속도를 높였습니다.</div>
+      <div class="detail-slider__text">접근성을 높이기 위해 많은 노력을 했습니다. 먼저, axios를 사용하여 사용자에 따라서 필요한 정보만 불러들일 수 있도록 하여, 초기 로딩 웹 페이지 로딩 속도를 높였습니다. 또한, webp 파일을 webp 파일 형식으로 바꾸어 사이트의 속도를 높였습니다.</div>
     </div>
   </div>
   
