--- a/project_content/project_details/project_detail04.html
+++ b/project_content/project_details/project_detail04.html
@@ -3,7 +3,7 @@
 
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_04_01.png" alt="">
+      <img src="/images/projects/detail_04_01.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
@@ -29,7 +29,7 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_04_03.png" alt="">
+      <img src="/images/projects/detail_04_03.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
@@ -41,7 +41,7 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_04_04.png" alt="">
+      <img src="/images/projects/detail_04_04.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
