add project7 image and content

--- a/project_content/project_overview05.html
+++ b/project_content/project_overview05.html
@@ -15,6 +15,7 @@
         <li>Mobile</li>
         <li>React</li>
         <li>Scss</li>
+        <li>Firebase</li>
       </ul>
     </div>
     <div class="project_links">
