--- a/project_content/project_details/project_detail05.html
+++ b/project_content/project_details/project_detail05.html
@@ -29,7 +29,7 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_05_03.png" alt="">
+      <img src="/images/projects/detail_05_03.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
@@ -42,7 +42,7 @@
   
   <div class="detail-slider__item swiper-slide">
     <div class="detail-slider__img">
-      <img src="/images/projects/detail_05_04.png" alt="">
+      <img src="/images/projects/detail_05_04.webp" alt="">
     </div>
     <div class="detail-slider__content">
       <!-- <span class="detail-slider__code">osung-jihyun</span> -->
